# PicMan

./: README.md  pyproject.toml
src/picman/: main.py  organize_by_date.py  organize_by_filetype.py  organize_by_rating.py
tests/: test_get_exif_date.py
