[project]
name = "picman"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "piexif>=1.1.3",
    "pillow>=10.0.0",
    "tqdm>=4.67.1",
    "typer>=0.19.2",
]

[build-system]
requires = ["uv_build>=0.7.20,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "picman"
module-root = "src"

[tool.ty.src]
include = ["src"]


[project.scripts]
pm = "picman.main:app"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "ruff>=0.12.8",
]
